Closed Bug 229540 Opened 22 years ago Closed 22 years ago

<nsAppShellWindowEnumerator.cpp>: Fix |`void GetAttribute(nsIXULWindow*, const nsAutoString&, nsAutoString&)' declared `static' but never defined| 'Build Warning', and code cleanup

Categories

(SeaMonkey :: General, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.7alpha

People

(Reporter: sgautherie, Assigned: sgautherie)

References

(Blocks 1 open bug)

Details

Attachments

(3 obsolete files)

MXR: nsAppShellWindowEnumerator.cpp | 1.11 | { 61 static void GetAttribute( nsIXULWindow* inWindow, 62 const nsAutoString& inAttribute, nsAutoString& outValue); 104 void GetAttribute(nsIXULWindow* aWindow, const nsAString &anAttribute, 105 nsAString &outValue) 106 { } This function is declared with |nsAutoString| but defined with |nsAString|...
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.7alpha
Summary: <nsAppShellWindowEnumerator.cpp>: Fix |`void GetAttribute(nsIXULWindow*, const nsAutoString&, nsAutoString&)' declared `static' but never defined| 'Build Warning' → <nsAppShellWindowEnumerator.cpp>: Fix |`void GetAttribute(nsIXULWindow*, const nsAutoString&, nsAutoString&)' declared `static' but never defined| 'Build Warning', and code cleanup
Comment on attachment 138042 [details] [diff] [review] (Av1) <nsAppShellWindowEnumerator.cpp> I have no compiler: Could you compile/test/review it ? Thanks.
Attachment #138042 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 138042 [details] [diff] [review] (Av1) <nsAppShellWindowEnumerator.cpp> This patch is too complicated for me to review. If you had just changed all the declarations to match the definitions then I could have reviewed it.
Attachment #138042 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 138042 [details] [diff] [review] (Av1) <nsAppShellWindowEnumerator.cpp> Agreed: let's review it in smaller parts.
Attachment #138042 - Attachment is obsolete: true
Comment on attachment 139265 [details] [diff] [review] (Bv1) <nsAppShellWindowEnumerator.cpp>, warning fix I have no compiler: Could you compile/test/review it ? Thanks.
Attachment #139265 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 139265 [details] [diff] [review] (Bv1) <nsAppShellWindowEnumerator.cpp>, warning fix (unwanted Cut&Paste :-()
Attachment #139265 - Attachment is obsolete: true
Attachment #139265 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 139266 [details] [diff] [review] (Bv1b) <nsAppShellWindowEnumerator.cpp>, warning fix [Checked in: Comment 13] I have no compiler: Could you compile/test/review it ? Thanks.
Attachment #139266 - Flags: review?(neil.parkwaycc.co.uk)
The latest patch, 139266, is fine. That first patch, please don't ever do any of that. Even the parts a compiler would allow.
Comment on attachment 139266 [details] [diff] [review] (Bv1b) <nsAppShellWindowEnumerator.cpp>, warning fix [Checked in: Comment 13] As per comment 10.
Attachment #139266 - Flags: review?(neil.parkwaycc.co.uk) → review+
Attachment #139266 - Flags: superreview?(alecf)
Comment on attachment 139266 [details] [diff] [review] (Bv1b) <nsAppShellWindowEnumerator.cpp>, warning fix [Checked in: Comment 13] sr=alecf
Attachment #139266 - Flags: superreview?(alecf) → superreview+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Attachment #139266 - Attachment description: (Bv1b) <nsAppShellWindowEnumerator.cpp>, warning fix → (Bv1b) <nsAppShellWindowEnumerator.cpp>, warning fix [Checked in: Comment 13]
Attachment #139266 - Attachment is obsolete: true
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: