Fix compiler warning b=229540 p=gautheri@noos.fr r=danm sr=alecf